...

    // AddInstructionStepScreen
    const val HORIZONTAL_PADDING = 16
    const val CONTAINER_PADDING = 16
    const val SPACE_BETWEEN_ELEMENTS = 16
    const val INSTRUCTION_VERTICAL_PADDING = 8
    const val SAVE_BUTTON_TAG = "saveButton"
    const val MAXLINES_TIME_FIELD = 1
    const val MINLINES_VISIBLE_FOR_INSTRUCTION = 10
    const val MAXLINES_VISIBLE_FOR_INSTRUCTION = 10
    const val TIME_CHARACTER_LIMIT = 4

    // IconDropdownMenu
...
      const val RECIPE_CATEGORIES_TEST_TAG = "recipeCategories"
      const val RECIPE_IMAGE_TEST_TAG = "recipeImage"
      const val RECIPE_TITLE_TEST_TAG = "recipeTitle"
      const val RECIPE_FAVORITE_ICON_TEST_TAG = "recipeFavoriteIcon"
      const val RECIPE_DOWNLOAD_ICON_TEST_TAG = "recipeDownloadIcon"
      const val RECIPE_DELETE_ICON_TEST_TAG = "recipeDeleteIcon"
      const val CONFIRMATION_POP_UP = "confirmationPopUp"
      const val CONFIRMATION_BUTTON = "confirmButton"
      const val CANCEL_BUTTON = "cancelButton"
    }

    object SignInScreen {
      const val TACO = "taco"
      const val SUSHI = "sushi"
      const val AVOCADO = "avocado"
...

    object RecipeBuilder {
      const val OUT_OF_BOUNDS_MESSAGE = "Index out of bounds"
    }

    object AddInstructionStepScreen {
      const val INPUT_CONTAINER = "InputContainer"
      const val TIME_INPUT = "TimeInput"
      const val ICON_DROPDOWN = "IconDropdown"
      const val INSTRUCTION_INPUT = "InstructionInput"
      const val INSTRUCTION_ERROR = "InstructionError"
      const val DELETE_BUTTON = "DeleteButton"
    }

    object Category {
      const val DROPDOWN_CORNER_RADIUS = 8
      const val BUTTON_TEST_TAG = "NextStepButton"

...
