<resources>
    <string name="app_name">Plate Swipe</string>
    <string name="title_activity_main">Plate Swipe</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="default_web_client_id">308109588643-14cdmrd4mgdqns8sn27i9p25cm2b0mlq.apps.googleusercontent.com</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="fridge_ingredients_description">Fridge Ingredients description</string>

    <string name="plate_swipe_title">Plate Swipe</string>

    <string name="search_bar_place_holder">Search</string>
    <string name="add_to_recipe">Add to Recipe</string>
    <string name="add_to_fridge">Add to Fridge</string>

    <string name="account_screen_default_user_name">User Name</string>
    <string name="account_screen_liked_recipe_button_title">Liked Recipes</string>
    <string name="account_screen_created_recipe_button_title">Created Recipes</string>

    <string name="photo_capture_failed">Photo capture failed: %1$s</string>
    <string name="take_photo">Take Photo</string>

    //SwipePage
    <string name="filter_icon">Filter Icon</string>

    //FilterPage
    <string name="apply_filter">Apply</string>
    <string name="reset_filter">Reset</string>
    <string name="time_range_name">Time</string>
    <string name="price_range_name">Price</string>
    <string name="difficulty_name">Difficulty</string>
    <string name="category_name">Category</string>
    <string name="time_unit">min</string>
    <string name="price_unit">$</string>


    <string name="prep_time">Prep time</string>
    <string name="cook_time">Cook time</string>
    <string name="total_time">Total time</string>
    <string name="servings">Servings</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="counter_min">-</string>
    <string name="counter_max">+</string>

    //RecipeOverview
    <string name="unable_loading"> Unable to load recipe</string>

    //RecipeNameScreen
    <string name="create_your_recipe">Create your recipe</string>
    <string name="create_recipe_description">Create a recipe that others can discover and enjoy. Start by giving your dish a name!</string>
    <string name="recipe_name_label">Name of the recipe</string>
    <string name="recipe_name_hint">Choose a catchy title that reflects your dish</string>
    <string name="recipe_name_error">Please enter a recipe name</string>
    <string name="next_step">Next Step</string>

    //ChefImage
    <string name="chef_standing_description">Chef standing</string>

    //AddInstructionStepScreen
    <string name="step_label">Step</string>
    <string name="time_label">Time (min)</string>
    <string name="instruction_label">Instruction</string>
    <string name="save_label">Save</string>
    <string name="add_step">Add Step</string>
    <string name="error_message_empty_instruction">Please enter an instruction</string>

    //IconDropDownMenu
    <string name="add_icon">Add Icon</string>
    <string name="dropdown_icon">DropDown Icon</string>
    <string name="fire_icon_description">Heat</string>
    <string name="salt_icon_description">Season</string>
    <string name="mortar_icon_description">Mix</string>
    <string name="axe_icon_description">Prep</string>
    <string name="chef_s_hat_icon_description">Cook</string>

    //Scanner
    <string name="ingredient_not_found">Ingredient not found</string>

    //PublishRecipeScreen
    <string name="done_text">Done !</string>
    <string name="publish_recipe_button">Publish Recipe</string>

    //RecipeIngredientScreen
    <string name="list_ingredients">List the ingredients needed for your recipe. Add as many as you need.</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="no_ingredients">No Ingredients</string>
    <string name="quantity">Quantity</string>

    //RecipeInstructionsScreen
    <string name="add_instructions">Add Instructions</string>
    <string name="describe_instructions">Describe each step of how to prepare your dish.</string>
    <string name="next">Next</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="no_image">No Image</string>
    <string name="image_taken_from_camera">Image taken from camera</string>
    <string name="add_image">Add Image</string>

    //RecipeListInstructionsScreen
    <string name="RecipeListInstructionsScreen_Instructions">Instructions</string>
    <string name="RecipeListInstructionsScreen_Step">Step</string>
    <string name="RecipeListInstructionsScreen_Minutes">min</string>
    <string name="RecipeListInstructionsScreen_Delete">Delete</string>
    <string name="image_failed_to_load">Image failed to load</string>
    <string name="RecipeListInstruction_add_instruction_please">Please add at least one instruction</string>
    <string name="error_picture_not_taken">Please take or select a picture</string>

    //RecipeListIngredientsScreen
    <string name="scanner_instruction">Scanner Icon</string>
    <string name="result">Result</string>
    <string name="pop_up_title">Add to Recipe?</string>
    <string name="pop_up_description">Do you want to add this ingredient to your recipe?</string>
    <string name="pop_up_confirmation">Add to Recipe</string>
    <string name="pop_up_cancel">Cancel</string>
    <string name="pop_up_message_no_quantity">All ingredients must have a quantity</string>
    <string name="pop_up_message_no_ingredient">Please add at least one ingredient</string>

    //RecipeListScreen
    <string name="ingredient_list">Ingredients list</string>
    <string name="add">Add</string>
    <string name="close">Close</string>

    //PlateSwipeDropdownMenu
    <string name="no_item_selected">None selected</string>

    //RemoveRecipePopUp
    <string name="message_pop_up_delete_created">Are you sure that you want to delete this recipe?</string>
    <string name="message_pop_up_remove_liked">Are you sure that you want to remove this recipe from your liked recipes?</string>
    <string name="pop_up_confirm_removal_liked_recipe">Yes</string>>
    <string name="pop_up_confirm_cancel_removal_liked_recipe">No</string>

    //CategoryScreen
    <string name="optional_information">Optional Information</string>
    <string name="select_information_description_optional">Giving this information is optional, but it can make it easier for others to find your recipe.</string>
    <string name="select_category">Select a Category</string>
    <string name="select_difficulty">Select a Difficulty</string>
    <string name="no_category">No category</string>
    <string name="no_difficulty">No difficulty</string>


    //AddInstructionStepScreen
    <string name = "u_sure_u_want_to_delete">Are you sure you want to delete this step?</string>
    <string name = "delete">Delete</string>
    <string name="cancel">Cancel</string>

    //TimePickerScreen
    <string name="select_total_time">Select Total Time</string>
    <string name="select_time_description">Selecting the total time is optional, but it helps others understand how long your recipe will take.</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>

    //EditAccountScreen
    <string name="save_changes_button">Save changes</string>
    <string name="date_of_birth_label">Date of birth</string>
    <string name="confirm_date_of_birth_pop_up">Confirm</string>
    <string name="cancel_date_of_birth_pop_up">Cancel</string>
    <string name="username_label">Username</string>
    <string name="email_label">Email</string>

    //Fridge
    <string name="fridge_title">Fridge</string>
    <string name="empty_fridge_title">Empty Fridge</string>
    <string name="empty_fridge_description">Your fridge is currently empty, click below to add ingredient</string>
    <string name="date_pattern">dd/MM/yyyy</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="expiration_date">Expiration Date:</string>
    <string name="pop_up_title_fridge">Add to fridge?</string>
    <string name="pop_up_description_fridge">Do you want to add this ingredient to your fridge?</string>
    <string name="pop_up_confirmation_fridge">Add to fridge</string>
    <string name="expired">Expired</string>




    // RecipeList utils
    <string name="edit_recipe_icon_description">Edit Recipe</string>

    // EditRecipeNameScreen
    <string name="edit_your_recipe">Edit your recipe</string>
    <string name="edit_recipe_description">Make changes to your recipe details below.</string>
    <string name="do_you_want_to_download_this_recipe">Do you want to download this recipe?</string>
    <string name="do_you_want_to_remove_this_recipe_from_your_downloads">Do you want to remove this recipe from your downloads?</string>
    <string name="recipe_download_failed">Recipe download failed</string>
    <string name="recipe_downloaded">Recipe downloaded</string>
    <string name="you_are_offline">You are Offline!</string>
    <string name="this_feature_requires_an_internet_connection_please_check_your_connection_and_try_again">This feature requires an internet connection. Please check your connection and try again.</string>
    <string name="offline">Offline</string>
    <string name="camera_permission_is_required_to_use_this_feature">Camera permission is required to use this feature.</string>
    <string name="request_camera_permission">Request Camera Permission</string>
    <string name="camera_permission_denied_please_allow">Camera permission denied. Please allow it.</string>
</resources>