...
      modifier = Modifier.size(16.dp).testTag("recipeTimeIcon${recipe.idMeal}"),
      tint = Color.Gray)
  Text(
      modifier = Modifier.padding(4.dp).testTag("recipeTime${recipe.idMeal}"),
      text =
          "${arrayOf(
            10,
            15,
            20,
            30,
            45,
            50
        ).random()} min",
...
