...
      verticalArrangement = Arrangement.Top) {
        // Step Label
        Text(
            text = stringResource(R.string.step_label),
            style = Typography.titleMedium,
            color = MaterialTheme.colorScheme.onPrimary,
            modifier = Modifier.padding(vertical = 8.dp).testTag("StepLabel"))

        // Container for input fields
        Box(
            modifier =
                Modifier.fillMaxWidth()
                    .background(color = lightCream, shape = RoundedCornerShape(8.dp))
...
